k3s/webcheck/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcheck-svc
  namespace: utilities
spec:
  selector:
    app: webcheck
  ports:
    - name: http
      port: 80
      targetPort: 3000
