k3s/webcheck/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webcheck-ingress
  namespace: utilities
spec:
  rules:
    - host: webcheck.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webcheck-svc
                port:
                  number: 80
    - host: webcheck.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webcheck-svc
                port:
                  number: 80
